MDEV-24916 : Assertion `current_stmt_binlog_format == BINLOG_FORMAT_STMT || current_stmt_binlog_format == BINLOG_FORMAT_ROW' failed in THD::is_current_stmt_binlog_format_row

If inconsistency is introduced using debug_dbug instrumentation
node will drop from cluster and that would close mysql_bin_log.
This assertion is present only in debug builds and we should
make sure that binlog is open if it is called.